src/test/ui/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-default-method-bodies.rs:25:5
   |
LL |     NonConstImpl.a();
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
